# eth-merkle-tree-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  example.txt
.github/workflows/: ci.yml
examples/: Cargo.toml  main.rs
src/: lib.rs
src/cli/: main.rs
src/graph/: mod.rs  visualizer.rs
src/tree/: mod.rs
src/utils/: bytes.rs  errors.rs  keccak.rs  mod.rs  verify.rs
