[package]
name = "merkle-tree-visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.3"
hex = "0.4.3"
crypto-hash = "0.3.1"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
rust-crypto = "0.2"
