[package]
name = "eth_merkle_tree"
version = "0.1.0"
authors = ["Emirhan Guven <eg.emirhanguven@gmail.com>"]
description = "A Rust library for constructing and working with Ethereum Merkle Trees."
repository = "https://github.com/guvenemirhan/eth-merkle-tree-rs"
documentation = "https://docs.rs/eth_merkle_tree/"
license = "MIT"
edition = "2021"

[dependencies]
petgraph = "0.6"
hex = "0.4"
rust-crypto = "0.2"



[lib]
name = "eth_merkle_tree"

[[bin]]
name = "emtr"
path = "src/cli/main.rs"

[target.'cfg(target_arch="x86_64")'.dependencies]
structopt = "0.3"
csv = "1.1"
colored = "2.0"